--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -123,9 +123,9 @@ runs:
         unzip -q /tmp/android-sdk.zip -d /opt/android-sdk/cmdline-tools
         rm /tmp/android-sdk.zip
         mv /opt/android-sdk/cmdline-tools/cmdline-tools /opt/android-sdk/cmdline-tools/latest
-        export ANDROID_SDK_ROOT=/opt/android-sdk/cmdline-tools/latest
-        echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
-        echo "$ANDROID_SDK_ROOT/bin" >> $GITHUB_PATH
+        export ANDROID_HOME=/opt/android-sdk/cmdline-tools/latest
+        echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+        echo "$ANDROID_HOME/bin" >> $GITHUB_PATH
       if: matrix.config == 'android'
 
     - name: Configure Android SDK
