--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -114,6 +114,7 @@ runs:
 
     #
     # Android
+    # See https://developer.android.com/studio#command-tools for the latest version
     #
     - name: Install Android SDK
       shell: bash
@@ -125,6 +126,7 @@ runs:
         mv /opt/android-sdk/cmdline-tools/cmdline-tools /opt/android-sdk/cmdline-tools/latest
         export ANDROID_HOME=/opt/android-sdk/cmdline-tools/latest
         echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+        echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
         echo "$ANDROID_HOME/bin" >> $GITHUB_PATH
       if: matrix.config == 'android'
 
