--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -133,7 +133,9 @@ runs:
     - name: Configure Android SDK
       shell: bash
       run: |
-        bash -c 'yes | sdkmanager --licenses'
+        yes 2>/dev/null | sdkmanager --licenses
+        ls /opt/android-sdk
+        ls /opt/android-sdk/cmdline-tools
         sdkmanager "platform-tools" "build-tools;33.0.2" "platforms;android-33"
         # sdkmanager "extras;intel;Hardware_Accelerated_Execution_Manager"
         sdkmanager "system-images;android-33;google_apis;x86_64"
