--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -134,14 +134,12 @@ runs:
       shell: bash
       run: |
         bash -c 'yes 2>/dev/null | sdkmanager --licenses'
-        ls /opt/android-sdk
-        ls /opt/android-sdk/cmdline-tools
+        cp -r /opt/android-sdk/licenses $ANDROID_HOME/licenses
         sdkmanager "platform-tools" "build-tools;33.0.2" "platforms;android-33"
         # sdkmanager "extras;intel;Hardware_Accelerated_Execution_Manager"
         sdkmanager "system-images;android-33;google_apis;x86_64"
         sdkmanager emulator
         sdkmanager --update
-        bash -c 'yes 2>/dev/null | sdkmanager --licenses'
       if: matrix.config == 'android'
 
     #
