--- a/java/test/android/controller/gradle.properties
+++ b/java/test/android/controller/gradle.properties
@@ -1,7 +1,7 @@
 # Copyright (c) ZeroC, Inc. All rights reserved.
 
 # Version used in JAR files
-iceVersion = 3.8.0-alpha0
+iceVersion = 3.8.0-alpha.0
 
 # Set iceHome to location of Ice installation if Ice was installed in a
 # non-standard location. You must use forward slashes in the path, even on
