--- a/swift/Makefile
+++ b/swift/Makefile
@@ -8,16 +8,23 @@ include $(top_srcdir)/config/Make.rules
 
 CONFIG ?= $(if $(filter $(OPTIMIZE),no),Debug,Release)
 
-SWIFT_BUILD_FLAGS ?= $(if $(V),,--quiet) --configuration  $(shell echo $(CONFIG) | tr '[:upper:]' '[:lower:]')
+SWIFT_BUILD_FLAGS ?= -Xswiftc -warnings-as-errors $(if $(V),,--quiet) --configuration  $(shell echo $(CONFIG) | tr '[:upper:]' '[:lower:]')
 
 # $(call make-xcodebuild-rule,$1=rule,$2=platform,$3=action)
 define xcode-test-app-rule
 $1:: test/ios/TestDriverApp.xcodeproj
 	xcodebuild $(if $(V),,-quiet) \
 		-project test/ios/TestDriverApp.xcodeproj \
-		-scheme TestDriverApp \
-		-configuration $(CONFIG) \
+		-scheme Ice \
 		-arch arm64 \
+		-configuration $(CONFIG) \
+		-sdk macosx $3
+
+	xcodebuild $(if $(V),,-quiet) \
+		-project test/ios/TestDriverApp.xcodeproj \
+		-scheme TestDriverApp \
+		-arch arm64 \
+		-configuration $(CONFIG) \
 		-sdk $2 $3
 
 endef
@@ -28,7 +35,7 @@ srcs::
 	$(Q)swift build $(SWIFT_BUILD_FLAGS)
 
 tests::
-	$(Q)swift build -Xswiftc -warnings-as-errors --package-path test $(SWIFT_BUILD_FLAGS)
+	$(Q)swift build --package-path test $(SWIFT_BUILD_FLAGS)
 
 install::
 	@echo nothing to install
