--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,8 @@ jobs:
           - os: macos-15
             config: "swift-ios"
             working_directory: "swift"
-            build_flags: "PLATFORMS='macosx iphonesimulator'"
-            test_flags: "--platform=iphonesimulator --controller-app --filter=Ice/operations" # Remove rfilter once #3286 is fixed
+            build_flags: "PLATFORMS='macosx iphonesimulator' OPTIMIZE=no"
+            test_flags: "--config Debug --platform=iphonesimulator --controller-app --filter=Ice/operations" # Remove rfilter once #3286 is fixed
             build_cpp_and_python: true
 
           # Static builds
