--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -145,8 +145,10 @@ runs:
         set -x
         echo "creating avd"
         avdmanager -v create avd -k "system-images;android-33;google_apis;x86_64" -d "Nexus 6" -n IceTests
+        avdmanager -v create avd -k "system-images;android-33;google_apis;x86_64" -d "Nexus 6" -n IceTests
         echo "listing avds"
         emulator -list-avds
+         emulator -avd IceTests
       if: matrix.config == 'android'
 
     #
