--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -145,9 +145,12 @@ runs:
         set -x
         echo "creating avd"
         avdmanager -v create avd -k "system-images;android-33;google_apis;x86_64" -d "Nexus 6" -n IceTests
+        avdmanager -v create avd -k "system-images;android-33;google_apis;x86_64" -d "Nexus 6" -n IceTests || true
         echo "listing avds"
         emulator -list-avds
-         emulator -avd IceTests
+        emulator -avd IceTests || true
+        ls ~/.android/avd
+
       if: matrix.config == 'android'
 
     #
