--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -149,6 +149,7 @@ runs:
         echo "listing avds"
         emulator -list-avds
         emulator -avd IceTests || true
+        sudo find / -name '.android'
         ls ~/.android/avd
 
       if: matrix.config == 'android'
