--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -130,6 +130,9 @@ runs:
         echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
         echo "$ANDROID_HOME/emulator" >> $GITHUB_PATH
         echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
+
+        # For some reason without this avdmanager is placgin the avd into $HOME/.config/.android/avd
+        echo "ANDROID_AVD_HOME=$HOME/.android/avd" >> $GITHUB_ENV
       if: matrix.config == 'android'
 
     - name: Configure Android SDK
