--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -116,6 +116,14 @@ runs:
     # Android
     # See https://developer.android.com/studio#command-tools for the latest version
     #
+
+    # See https://github.com/marketplace/actions/android-emulator-runner
+    - name: Enable KVM group perms
+      run: |
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+        sudo udevadm control --reload-rules
+        sudo udevadm trigger --name-match=kvm
+
     - name: Install Android SDK
       shell: bash
       run: |
