--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -119,10 +119,12 @@ runs:
 
     # See https://github.com/marketplace/actions/android-emulator-runner
     - name: Enable KVM group perms
+      shell: bash
       run: |
         echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
         sudo udevadm control --reload-rules
         sudo udevadm trigger --name-match=kvm
+      if: matrix.config == 'android'
 
     - name: Install Android SDK
       shell: bash
