--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,13 +98,13 @@ jobs:
             # We want to test C++ and Swift only (in each direction)
             test_flags: "--all-cross --filter cpp --filter swift"
 
-          # # Android
-          # - os: ubuntu-24.04
-          #   config: "android"
-          #   working_directory: "java"
-          #   test_flags: "--android --controller-app"
-          #   build_cpp_and_python: true
-          #   build_android_controller: true
+          # Android
+          - os: ubuntu-24.04
+            config: "android"
+            working_directory: "java"
+            test_flags: "--android --controller-app"
+            build_cpp_and_python: true
+            build_android_controller: true
 
     runs-on: ${{ matrix.os }}
     steps:
