--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -126,29 +126,37 @@ runs:
         sudo udevadm trigger --name-match=kvm
       if: matrix.config == 'android'
 
-    # - name: Install Android SDK
-    #   shell: bash
-    #   run: |
-    #     wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O /tmp/android-sdk.zip
-    #     mkdir -p /opt/android-sdk/cmdline-tools
-    #     unzip -q /tmp/android-sdk.zip -d /opt/android-sdk/cmdline-tools
-    #     rm /tmp/android-sdk.zip
-    #     mv /opt/android-sdk/cmdline-tools/cmdline-tools /opt/android-sdk/cmdline-tools/latest
-    #     export ANDROID_HOME=/opt/android-sdk/
-    #     echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-    #     echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
-    #     echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
-    #     echo "$ANDROID_HOME/emulator" >> $GITHUB_PATH
-    #     echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
+    - name: Install Android SDK
+      shell: bash
+      run: |
+        wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O /tmp/android-sdk.zip
+        mkdir -p /opt/android-sdk/cmdline-tools
+        unzip -q /tmp/android-sdk.zip -d /opt/android-sdk/cmdline-tools
+        rm /tmp/android-sdk.zip
+        mv /opt/android-sdk/cmdline-tools/cmdline-tools /opt/android-sdk/cmdline-tools/latest
+        wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O /tmp/android-sdk.zip
+        mkdir -p /opt/android-sdk/cmdline-tools
+        unzip -q /tmp/android-sdk.zip -d /opt/android-sdk/cmdline-tools
+        rm /tmp/android-sdk.zip
+        mv /opt/android-sdk/cmdline-tools/cmdline-tools /opt/android-sdk/cmdline-tools/latest
 
-    #     # For some reason avdmanager is placing the avd into $HOME/.config/.android/avd instead of $HOME/.android/avd
-    #     echo "ANDROID_AVD_HOME=$HOME/.config/.android" >> $GITHUB_ENV
-    #   if: matrix.config == 'android'
+    - name: Install Android SDK
+      shell: bash
+      run: |
+        # export ANDROID_HOME=/opt/android-sdk/
+        # echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+        # echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
+        echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        echo "$ANDROID_HOME/emulator" >> $GITHUB_PATH
+        echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
+        # For some reason avdmanager is placing the avd into $HOME/.config/.android/avd instead of $HOME/.android/avd
+        echo "ANDROID_AVD_HOME=$HOME/.config/.android" >> $GITHUB_ENV
+      if: matrix.config == 'android'
 
     - name: Configure Android SDK
       shell: bash
       run: |
-        bash -c 'yes 2>/dev/null | sdkmanager --licenses'
+        # bash -c 'yes 2>/dev/null | sdkmanager --licenses'
         sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34"
         # sdkmanager "extras;intel;Hardware_Accelerated_Execution_Manager"
         sdkmanager "system-images;android-34;google_apis;x86_64"
