--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -114,7 +114,6 @@ runs:
 
     #
     # Android
-    # See https://developer.android.com/studio#command-tools for the latest version
     #
 
     # See https://github.com/marketplace/actions/android-emulator-runner
@@ -126,26 +125,9 @@ runs:
         sudo udevadm trigger --name-match=kvm
       if: matrix.config == 'android'
 
-    - name: Install Android SDK
+    - name: Android SDK and PATH
       shell: bash
       run: |
-        wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O /tmp/android-sdk.zip
-        mkdir -p /opt/android-sdk/cmdline-tools
-        unzip -q /tmp/android-sdk.zip -d /opt/android-sdk/cmdline-tools
-        rm /tmp/android-sdk.zip
-        mv /opt/android-sdk/cmdline-tools/cmdline-tools /opt/android-sdk/cmdline-tools/latest
-        wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O /tmp/android-sdk.zip
-        mkdir -p /opt/android-sdk/cmdline-tools
-        unzip -q /tmp/android-sdk.zip -d /opt/android-sdk/cmdline-tools
-        rm /tmp/android-sdk.zip
-        mv /opt/android-sdk/cmdline-tools/cmdline-tools /opt/android-sdk/cmdline-tools/latest
-
-    - name: Install Android SDK
-      shell: bash
-      run: |
-        # export ANDROID_HOME=/opt/android-sdk/
-        # echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-        # echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
         echo "$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_PATH
         echo "$ANDROID_HOME/emulator" >> $GITHUB_PATH
         echo "$ANDROID_HOME/platform-tools" >> $GITHUB_PATH
@@ -156,13 +138,10 @@ runs:
     - name: Configure Android SDK
       shell: bash
       run: |
-        # bash -c 'yes 2>/dev/null | sdkmanager --licenses'
         sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34"
-        # sdkmanager "extras;intel;Hardware_Accelerated_Execution_Manager"
         sdkmanager "system-images;android-34;google_apis;x86_64"
         sdkmanager emulator
         sdkmanager --update
-
       if: matrix.config == 'android'
 
     #
