--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -24,7 +24,7 @@ jobs:
         working-directory: swift
         run: |
           swift format . --recursive --in-place --configuration .swift-format.json
-          git diff --exit-code
+          git diff --exit-code --no-index
 
       - name: swift-format Lint
         working-directory: swift
