--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,29 +1,36 @@
-name: Swift lint and format
+name: Swift Format
 
 on:
   workflow_dispatch:
   push:
     branches: ["main"]
-    paths:
-      - "swift/**"
   pull_request:
     # The branches below must be a subset of the branches above
     branches: ["main"]
-    paths:
-      - "swift/**"
 
 jobs:
   swift-format:
-    name: Swift Format & Lint
-    runs-on: macos-15
+    name: Swift format and lint
+    runs-on: ubuntu-latest
+    container:
+      image: swift
+      volumes:
+        - ${{ github.workspace }}:${{ github.workspace }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Install swift-format
-        run: brew install swift-format
+
+      # https://github.com/actions/runner/issues/2033
+      - name: Set safe directory
+        run: |
+          git config --global --add safe.directory /__w/ice/ice
+
       - name: swift-format Format
         working-directory: swift
-        run: swift-format . --recursive --configuration .swift-format.json
+        run: |
+          swift format . --recursive --in-place --configuration .swift-format.json
+          git diff --exit-code
+
       - name: swift-format Lint
         working-directory: swift
-        run: swift-format lint . --recursive --strict --configuration .swift-format.json
+        run: swift format lint . --recursive --strict --configuration .swift-format.json
