--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -1,4 +1,4 @@
-name: JavaScript Prettier
+name: JavaScript
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
     branches: ["main"]
 
 jobs:
-  js-prettier:
+  prettier:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'latest'
+          node-version: "latest"
 
       - name: Run JavaScript prettier
         run: npx prettier --check .
