Add clang-tidy workflow (#3403)

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -1,5 +1,4 @@
-name: Clang Format
-
+name: C++
 on:
   workflow_dispatch:
   push:
@@ -30,3 +29,38 @@ jobs:
         run: |
           find . -name "*.h" -o -name "*.c" -o -name "*.cpp" -o -name "*.mm" | xargs clang-format-19 --style=file --fallback-style=none --Werror --dry-run
           find cpp -name "*.m" | xargs clang-format-19 --style=file --fallback-style=none --Werror --dry-run
+
+  clang-tidy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install clang-tidy
+        run: |
+          # This LLVM script will add the relevant LLVM PPA: https://apt.llvm.org/
+          wget https://apt.llvm.org/llvm.sh -O /tmp/llvm.sh
+          chmod +x /tmp/llvm.sh
+          sudo /tmp/llvm.sh 19
+          sudo apt-get install -y clang-tidy-19
+          rm /tmp/llvm.sh
+          clang-tidy-19 --version
+
+      - name: Install bear
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y bear
+          bear --version
+
+      - name: Checkout Ice
+        uses: actions/checkout@v4
+
+      - name: Setup Ice Build Dependencies
+        uses: ./.github/actions/setup-dependencies
+
+      - name: Build Ice
+        timeout-minutes: 90
+        working-directory: cpp
+        run: bear -- make srcs
+
+      - name: Run Clang Tidy
+        working-directory: cpp
+        run: |
+          run-clang-tidy-19 -j$(nproc) -quiet src/Ice
