--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   matlab-analyzer:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
