--- a/.github/workflows/whitespace.yml
+++ b/.github/workflows/whitespace.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   whitespace-validation:
     name: Validate trailing whitespace and consecutive empty lines
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
