--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
             cross_test_flags: "--all-cross"
           - os: ubuntu-24.04-arm
             config: "release"
-            build_flags: "SKIP=csharp"
+            build_flags: "SKIP=csharp" # Skip C# on ARM as .NET compiler keeps crashing
             test_flags: "--rfilter=java/Ice/udp --rfilter=csharp" # Remove rfilter once https://github.com/zeroc-ice/ice/issues/3389 is fixed
           - os: windows-2022
             config: "release"
