--- a/.github/actions/documentation/action.yml
+++ b/.github/actions/documentation/action.yml
@@ -100,5 +100,6 @@ runs:
         AWS_ACCESS_KEY_ID: ${{ inputs.aws-access-key-id }}
         AWS_SECRET_ACCESS_KEY: ${{ inputs.aws-secret-access-key }}
         AWS_S3_CODE_BUCKET: ${{ inputs.aws-s3-code-bucket }}
-        AWS_DEFAULT_REGION: us-east-1  shell: bash
+        AWS_DEFAULT_REGION: us-east-1
+      shell: bash
       if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
