clang-tidy workflow fixes (#3413)

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -33,6 +33,12 @@ jobs:
   clang-tidy:
     runs-on: ubuntu-24.04
     steps:
+      - name: Checkout Ice
+        uses: actions/checkout@v4
+
+      - name: Setup Ice Build Dependencies
+        uses: ./.github/actions/setup-dependencies
+
       - name: Install clang-tidy
         run: |
           # This LLVM script will add the relevant LLVM PPA: https://apt.llvm.org/
@@ -49,12 +55,6 @@ jobs:
           sudo apt-get install -y bear
           bear --version
 
-      - name: Checkout Ice
-        uses: actions/checkout@v4
-
-      - name: Setup Ice Build Dependencies
-        uses: ./.github/actions/setup-dependencies
-
       - name: Build Ice
         timeout-minutes: 90
         working-directory: cpp
@@ -63,4 +63,4 @@ jobs:
       - name: Run Clang Tidy
         working-directory: cpp
         run: |
-          run-clang-tidy-19 -j$(nproc) -quiet src/Ice/ || true
+          run-clang-tidy-19 -j$(nproc) -quiet src/
